<resources>
    <string name="app_name">Thesis</string>
    <string name="sign_out">Sign Out</string>
    <string name="verification_headline">A verification email has been sent to your account.</string>
    <string name="verification_explanation">Please sign in after you completed verification.</string>
    <string name="verification_signin_button">Sign In</string>
    <string name="verification_resend_button">Send the verification link again</string>
    <string name="create_flat_dialog_title">Let us get started!</string>
    <string name="create_flat_dialog_message">Seems like you do not have a flat yet. Let us create one!</string>
    <string name="create_flat_dialog_positive">OK</string>
    <string name="create_flat_dialog_negative">Join an existing flat</string>
    <string name="delete_flat_dialog_message">Are you sure you want to delete this flat?</string>
    <string name="delete_flat_dialog_positive">Yes</string>
    <string name="logs_email_sent">Email successfully sent.</string>
    <string name="logs_email_fail">Something went wrong.</string>
    <string name="logs_user_created">User created!</string>
    <string name="logs_signin_canceled">Sign in canceled!</string>
    <string name="logs_mainActivity_onCanceled">onCancelled</string>
    <string name="firebase_reference_users">users</string>
    <string name="firebase_reference_email">email</string>
    <string name="tags_create_flat_dialog">create flat dialog</string>
    <string name="tags_delete_flat_dialog">delete flat dialog</string>
    <string name="tags_switch_flat_dialog">switch flat dialog</string>
    <string name="hint_flat_name">Name</string>
    <string name="hint_flat_address">Address</string>
    <string name="label_flat_name">Name</string>
    <string name="label_flat_address">Address</string>
    <string name="button_text_create_flat">Create</string>
    <string name="firebase_references_flats">flats</string>
    <string name="firebase_reference_user_flats">userFlats</string>
    <string name="firebase_reference_flats_users">flatUsers</string>
    <string name="logs_createFlatActivity_nosnapshot">dataSnapshot not found</string>
    <string name="logs_flat_created">Flat created!</string>
    <string name="drawer_menu_create">Create new flat</string>
    <string name="drawer_menu_edit_flat">Edit flat</string>
    <string name="drawer_menu_delete">Delete flat</string>
    <string name="drawer_menu_switch_flat">Switch current flat</string>
    <string name="drawer_menu_edit_profile">Edit profile</string>
    <string name="drawer_menu_join_flat">Join existing flat</string>
    <string name="drawer_header_title">Name of flat</string>
    <string name="drawer_header_subtitle">Address of flat</string>
    <string name="shared_prefs_flat_name">flat_name</string>
    <string name="shared_prefs_flat_address">flat_address</string>
    <string name="shared_prefs_user_email">Current user email address without dots</string>
    <string name="shared_prefs_flat_key">flat_key</string>
    <string name="shared_prefs_flat_owner">flat_owner</string>
    <string name="shared_prefs_list_flat_names">shared_prefs_list_flat_names</string>
    <string name="shared_prefs_list_flat_addresses">shared_prefs_list_flat_addresses</string>
    <string name="shared_prefs_list_flat_keys">shared_prefs_list_flat_keys</string>
    <string name="shared_prefs_list_flat_owners">shared_prefs_list_flat_owners</string>
    <string name="shared_prefs_list_current_user_names">shared_prefs_list_current_user_names</string>
    <string name="shared_prefs_list_current_user_addresses">shared_prefs_list_current_user_addresses</string>
    <string name="shared_prefs_list_current_user_keys">shared_prefs_list_current_user_keys</string>
    <string name="delete_flat_dialog_negative">No</string>
    <string name="hint_profile_firstname">First name</string>
    <string name="label_first_name">First name</string>
    <string name="hint_profile_surname">Surname</string>
    <string name="label_surname">Surname</string>
    <string name="hint_profile_tag">Tag</string>
    <string name="hint_flat_search">Search flats</string>
    <string name="label_tag">Tag</string>
    <string name="button_text_done_editing">Done</string>
    <string name="flat_node_name">name</string>
    <string name="flat_node_key">key</string>
    <string name="flat_node_address">address</string>
    <string name="flat_node_owner">owner</string>
    <string name="user_node_tag">tag</string>
    <string name="shared_prefs_default">No flat yet</string>
    <string name="error_blank_field">This field cannot be blank</string>
    <string name="error_tag_exists">Tag already exists</string>

</resources>
